This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Compiler warnings in building Python 3.9 on Windows
Type: Stage: resolved
Components: Extension Modules, Interpreter Core Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ammar2, serhiy.storchaka, vstinner
Priority: normal Keywords: patch

Created on 2021-03-15 12:12 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 24873 merged serhiy.storchaka, 2021-03-15 12:14
PR 20628 ammar2, 2021-03-16 15:50
PR 20508 ammar2, 2021-03-16 15:53
PR 22387 vstinner, 2021-03-16 15:55
PR 24896 merged ammar2, 2021-03-16 16:26
Messages (6)
msg388731 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-03-15 12:12
Currently building Python 3.9 on Windows produce many compiler warnings. 3.8 and master are clean.

* Warnings in the _sre module caused by the bug in MSVC (complains about automatic conversion of "void **" to "const void *"). Fixed by backporting PR20508.

* Warnings in many files related to using legacy C API (e.g. PyUnicode_AsUnicode) in Windows specific code.

* ..\Objects\exceptions.c(2313): warning C4098: 'MemoryError_dealloc': 'void' function returning a value

* ..\Objects\frameobject.c(400): warning C4267: 'initializing': conversion from 'size_t' to 'int', possible loss of data

The last two may be hidden bugs.
msg388821 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-03-16 06:03
New changeset 651fc30af7ac6138764106b87632cabca56a98bb by Serhiy Storchaka in branch '3.9':
bpo-43499: Silence compiler warnings about using legacy C API on Windows (GH-24873)
https://github.com/python/cpython/commit/651fc30af7ac6138764106b87632cabca56a98bb
msg388855 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-03-16 16:14
Ammar Askar, do you mind to backport PR 20628 to 3.9? It is the only warning left, and it seems there is a potential bug.
msg388856 - (view) Author: Ammar Askar (ammar2) * (Python committer) Date: 2021-03-16 16:15
Sure thing, I'll work on the backport.
msg388954 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-03-17 18:26
New changeset db733761060be92915b5f5cba209dcaada88f94e by Ammar Askar in branch '3.9':
[3.9] bpo-43499: Restrict co_code to be under INT_MAX in codeobject (GH-20628) (GH-24896)
https://github.com/python/cpython/commit/db733761060be92915b5f5cba209dcaada88f94e
msg388955 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-03-17 18:27
Thank you Ammar.
History
Date User Action Args
2022-04-11 14:59:42adminsetgithub: 87665
2021-03-17 18:27:30serhiy.storchakasetstatus: open -> closed
resolution: fixed
messages: + msg388955

stage: patch review -> resolved
2021-03-17 18:26:46serhiy.storchakasetmessages: + msg388954
2021-03-16 16:26:29ammar2setpull_requests: + pull_request23661
2021-03-16 16:15:34ammar2setmessages: + msg388856
2021-03-16 16:14:45serhiy.storchakasetmessages: + msg388855
2021-03-16 15:55:08vstinnersetnosy: + vstinner
pull_requests: + pull_request23659
2021-03-16 15:53:44ammar2setpull_requests: + pull_request23658
2021-03-16 15:50:49ammar2setnosy: + ammar2
pull_requests: + pull_request23657
2021-03-16 06:03:50serhiy.storchakasetmessages: + msg388821
2021-03-15 12:14:13serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request23634
2021-03-15 12:12:03serhiy.storchakacreate