bpo-43499: Silence compiler warnings about using legacy C API on Windows